[gd_scene load_steps=11 format=2]

[ext_resource path="res://data/intro/intro_bg.png" type="Texture" id=1]
[ext_resource path="res://data/menu/uitheme.tres" type="Theme" id=2]
[ext_resource path="res://data/menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://data/levels/2/level_2_fg_black.png" type="Texture" id=4]
[ext_resource path="res://data/menu/MainMenuPanel.gd" type="Script" id=5]
[ext_resource path="res://data/menu/ui_cancel.tres" type="ShortCut" id=6]
[ext_resource path="res://data/levels/1/level_1_fg_black.png" type="Texture" id=7]
[ext_resource path="res://data/levels/3/level_3_fg_black.png" type="Texture" id=8]
[ext_resource path="res://data/menu/1Misty_marshes_-_Menu_2.mp3" type="AudioStream" id=9]
[ext_resource path="res://data/menu/button.gd" type="Script" id=10]

[node name="MainMenu" type="Control" groups=["main menu"]]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -61.0
margin_right = 36.0
margin_bottom = 61.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelsButton" type="Button" parent="Buttons/VBoxContainer"]
margin_right = 82.0
margin_bottom = 47.0
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Help")
focus_next = NodePath("../Help")
focus_previous = NodePath("../Exit")
text = "Levels"
flat = true
script = ExtResource( 10 )

[node name="Help" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 51.0
margin_right = 82.0
margin_bottom = 98.0
focus_neighbour_top = NodePath("../LevelsButton")
focus_neighbour_bottom = NodePath("../Credits")
focus_next = NodePath("../Credits")
focus_previous = NodePath("../LevelsButton")
text = "Help"
flat = true
script = ExtResource( 10 )

[node name="Credits" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 102.0
margin_right = 82.0
margin_bottom = 149.0
focus_neighbour_top = NodePath("../Help")
focus_neighbour_bottom = NodePath("../Exit")
focus_next = NodePath("../Exit")
focus_previous = NodePath("../Help")
text = "Credits"
flat = true
script = ExtResource( 10 )

[node name="Exit" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 153.0
margin_right = 82.0
margin_bottom = 200.0
focus_neighbour_top = NodePath("../Credits")
focus_neighbour_bottom = NodePath("../LevelsButton")
focus_next = NodePath("../LevelsButton")
focus_previous = NodePath("../Credits")
text = "Exit"
flat = true
script = ExtResource( 10 )

[node name="LevelsPanel" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
on_visible_focus = NodePath("GridContainer/Level1/MarginContainer/HBoxContainer/Level_1")

[node name="GridContainer" type="GridContainer" parent="LevelsPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -454.0
margin_top = -100.0
margin_right = 454.0
margin_bottom = 100.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="Control" parent="LevelsPanel/GridContainer"]
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )

[node name="MarginContainer" type="MarginContainer" parent="LevelsPanel/GridContainer/Level1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="LevelsPanel/GridContainer/Level1/MarginContainer"]
margin_right = 250.0
margin_bottom = 205.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="LevelsPanel/GridContainer/Level1/MarginContainer/HBoxContainer"]
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 150 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level_1" type="Button" parent="LevelsPanel/GridContainer/Level1/MarginContainer/HBoxContainer"]
margin_top = 154.0
margin_right = 250.0
margin_bottom = 213.0
focus_neighbour_right = NodePath("../../../../Level2/MarginContainer/HBoxContainer/Level_2")
focus_neighbour_bottom = NodePath("../../../../../BackButton")
focus_next = NodePath("../../../../Level2/MarginContainer/HBoxContainer/Level_2")
text = "1"
flat = true
script = ExtResource( 10 )

[node name="Achievements" type="VBoxContainer" parent="LevelsPanel/GridContainer/Level1/MarginContainer/HBoxContainer"]
margin_top = 217.0
margin_right = 250.0
margin_bottom = 217.0

[node name="Completed" type="Label" parent="LevelsPanel/GridContainer/Level1/MarginContainer/HBoxContainer/Achievements"]
visible = false
margin_right = 250.0
margin_bottom = 53.0
text = "Completed!"
align = 1

[node name="SecretFound" type="Label" parent="LevelsPanel/GridContainer/Level1/MarginContainer/HBoxContainer/Achievements"]
visible = false
margin_right = 250.0
margin_bottom = 53.0
text = "Secret Found!"
align = 1

[node name="Level2" type="Control" parent="LevelsPanel/GridContainer"]
margin_left = 304.0
margin_right = 604.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )

[node name="MarginContainer" type="MarginContainer" parent="LevelsPanel/GridContainer/Level2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="LevelsPanel/GridContainer/Level2/MarginContainer"]
margin_right = 250.0
margin_bottom = 205.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="LevelsPanel/GridContainer/Level2/MarginContainer/HBoxContainer"]
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 150 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level_2" type="Button" parent="LevelsPanel/GridContainer/Level2/MarginContainer/HBoxContainer"]
margin_top = 154.0
margin_right = 250.0
margin_bottom = 213.0
focus_neighbour_left = NodePath("../../../../Level1/MarginContainer/HBoxContainer/Level_1")
focus_neighbour_right = NodePath("../../../../Level3/MarginContainer/HBoxContainer/Level_3")
focus_neighbour_bottom = NodePath("../../../../../BackButton")
focus_next = NodePath("../../../../Level3/MarginContainer/HBoxContainer/Level_3")
focus_previous = NodePath("../../../../Level1/MarginContainer/HBoxContainer/Level_1")
text = "2"
flat = true
script = ExtResource( 10 )

[node name="Achievements" type="VBoxContainer" parent="LevelsPanel/GridContainer/Level2/MarginContainer/HBoxContainer"]
margin_top = 217.0
margin_right = 250.0
margin_bottom = 217.0

[node name="Completed" type="Label" parent="LevelsPanel/GridContainer/Level2/MarginContainer/HBoxContainer/Achievements"]
visible = false
margin_right = 250.0
margin_bottom = 53.0
text = "Completed!"
align = 1

[node name="SecretFound" type="Label" parent="LevelsPanel/GridContainer/Level2/MarginContainer/HBoxContainer/Achievements"]
visible = false
margin_right = 250.0
margin_bottom = 53.0
text = "Secret Found!"
align = 1

[node name="Level3" type="Control" parent="LevelsPanel/GridContainer"]
margin_left = 608.0
margin_right = 908.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )

[node name="MarginContainer" type="MarginContainer" parent="LevelsPanel/GridContainer/Level3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="LevelsPanel/GridContainer/Level3/MarginContainer"]
margin_right = 250.0
margin_bottom = 205.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="LevelsPanel/GridContainer/Level3/MarginContainer/HBoxContainer"]
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 150 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level_3" type="Button" parent="LevelsPanel/GridContainer/Level3/MarginContainer/HBoxContainer"]
margin_top = 154.0
margin_right = 250.0
margin_bottom = 213.0
focus_neighbour_left = NodePath("../../../../Level2/MarginContainer/HBoxContainer/Level_2")
focus_neighbour_bottom = NodePath("../../../../../BackButton")
text = "3"
flat = true
script = ExtResource( 10 )

[node name="Achievements" type="VBoxContainer" parent="LevelsPanel/GridContainer/Level3/MarginContainer/HBoxContainer"]
margin_top = 217.0
margin_right = 250.0
margin_bottom = 217.0

[node name="Completed" type="Label" parent="LevelsPanel/GridContainer/Level3/MarginContainer/HBoxContainer/Achievements"]
visible = false
margin_right = 250.0
margin_bottom = 53.0
text = "Completed!"
align = 1

[node name="SecretFound" type="Label" parent="LevelsPanel/GridContainer/Level3/MarginContainer/HBoxContainer/Achievements"]
visible = false
margin_right = 250.0
margin_bottom = 53.0
text = "Secret Found!"
align = 1

[node name="BackButton" type="Button" parent="LevelsPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -80.0
margin_right = -29.0
margin_bottom = -21.0
shortcut_in_tooltip = false
shortcut = ExtResource( 6 )
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpPanel" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
on_visible_focus = NodePath("BackButton")

[node name="Control" type="Control" parent="HelpPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 400 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HelpPanel/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Controls: Use the arrow keys or [awsd]

Move:                      Left/Right/A/D
Interact/Jump:        Up/W
Change Dimension:   Down/S
Open Options Panel: Escape"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="HelpPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -80.0
margin_right = -29.0
margin_bottom = -21.0
shortcut_in_tooltip = false
shortcut = ExtResource( 6 )
text = "Back"
flat = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsPanel" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
on_visible_focus = NodePath("BackButton")

[node name="Control" type="Control" parent="CreditsPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 400 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CreditsPanel/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -40.0
text = "Credits

Giorgos Kiloglou
Nikos Katomeris
Antonis Anestis
Panos Koutselinis"
align = 1
valign = 1

[node name="ViewLicensesButton" type="Button" parent="CreditsPanel/Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -47.0
shortcut_in_tooltip = false
text = "View Licenses"
flat = true
script = ExtResource( 10 )

[node name="BackButton" type="Button" parent="CreditsPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -80.0
margin_right = -29.0
margin_bottom = -21.0
shortcut_in_tooltip = false
shortcut = ExtResource( 6 )
text = "Back"
flat = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LicensesPopup" type="Popup" parent="CreditsPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -175.0
margin_right = 250.0
margin_bottom = 175.0
rect_min_size = Vector2( 500, 350 )

[node name="Panel" type="Panel" parent="CreditsPanel/LicensesPopup"]
self_modulate = Color( 0.478431, 0.478431, 0.478431, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="CreditsPanel/LicensesPopup/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_bottom = -50.0
bbcode_enabled = true
bbcode_text = "[font=data/fonts/Charm_32B.tres]Godot[/font]
[font=data/fonts/Charm_18.tres]
This game uses Godot Engine, available under the following license:

Copyright (c) 2007-2022 Juan Linietsky, Ariel Manzur. Copyright (c) 2014-2022 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
[/font]

[font=data/fonts/Charm_32B.tres]FreeType[/font]
[font=data/fonts/Charm_18.tres]
Portions of this software are copyright © 2022 The FreeType Project (www.freetype.org). All rights reserved.
[/font]

[font=data/fonts/Charm_32B.tres]ENet[/font]
[font=data/fonts/Charm_18.tres]
Copyright (c) 2002-2022 Lee Salzman

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
[/font]

[font=data/fonts/Charm_32B.tres]MBedTLS[/font]
[font=data/fonts/Charm_18.tres]
Copyright The Mbed TLS Contributors

Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
[/font]"
text = "Godot

This game uses Godot Engine, available under the following license:

Copyright (c) 2007-2022 Juan Linietsky, Ariel Manzur. Copyright (c) 2014-2022 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.


FreeType

Portions of this software are copyright © 2022 The FreeType Project (www.freetype.org). All rights reserved.


ENet

Copyright (c) 2002-2022 Lee Salzman

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.


MBedTLS

Copyright The Mbed TLS Contributors

Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LicensesPopupCloseButton" type="Button" parent="CreditsPanel/LicensesPopup/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -72.5
margin_top = -47.0
margin_right = 72.5
shortcut_in_tooltip = false
shortcut = ExtResource( 6 )
text = "Close Licenses"
flat = true
script = ExtResource( 10 )

[node name="MuteButton" type="Button" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 73.0
margin_bottom = 74.0
text = "Mute"
flat = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0
autoplay = true
bus = "Music"

[connection signal="visibility_changed" from="Buttons" to="." method="_on_Buttons_visibility_changed"]
[connection signal="pressed" from="Buttons/VBoxContainer/LevelsButton" to="." method="_on_LevelsButton_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="visibility_changed" from="LevelsPanel" to="LevelsPanel" method="_on_Panel_visibility_changed"]
[connection signal="pressed" from="LevelsPanel/BackButton" to="LevelsPanel" method="_on_BackButton_pressed"]
[connection signal="visibility_changed" from="HelpPanel" to="HelpPanel" method="_on_Panel_visibility_changed"]
[connection signal="pressed" from="HelpPanel/BackButton" to="HelpPanel" method="_on_BackButton_pressed"]
[connection signal="visibility_changed" from="CreditsPanel" to="CreditsPanel" method="_on_Panel_visibility_changed"]
[connection signal="pressed" from="CreditsPanel/Control/ViewLicensesButton" to="." method="_on_ViewLicensesButton_pressed"]
[connection signal="pressed" from="CreditsPanel/BackButton" to="CreditsPanel" method="_on_BackButton_pressed"]
[connection signal="pressed" from="CreditsPanel/LicensesPopup/Panel/LicensesPopupCloseButton" to="." method="_on_LicensesPopupCloseButton_pressed"]
[connection signal="pressed" from="MuteButton" to="." method="_on_MuteButton_pressed"]
